<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pilgrim Pass</string>
    <string name="img_title">Img_title</string>
    <string name="guiding_every_step_of_the_way">guiding_every_step_of_the_way</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="or">or</string>
    <string name="pilgrim_pass">pilgrim_pass</string>
    <string name="guiding">guiding_every_step_of_the_way</string>
    <string name="select_user_type">select_user_type</string>
    <string name="username">username</string>
    <string name="select_province">select_province</string>
    <string name="sign_up">sign_up</string>
    <string name="password">password</string>
    <string name="lgn">Login</string>
    <string name="psd">Password</string>
    <string name="usern">Username</string>
    <string name="profileui">Profile</string>
    <string name="qr_code_passui">QR Code Pass</string>
    <string name="booking_screenui">Bookings</string>
    <string name="scan_pass_organizersui">Scan Pass (Organizers)</string>
    <string name="live_mapui">Live Map</string>
    <string name="admin_panelui">Admin Panel</string>
    <string name="smalldescription">Sacred Temple of the Tooth Relic in Kandy, Sri Lanka</string>
    <string name="daladamaligawa">Dalada Maligawa</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="selected_date_not_set">Selected Date: Not set</string>
    <string name="selected_time_not_set">Selected Time: Not set</string>
    <string name="your_qr_code_pass">Your QR Code Pass</string>
    <string name="generate_qr_for_booking">Generate QR for Booking</string>
    <string name="Qrimg">qrimg</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="full_name">Full Name</string>
    <string name="change_picture">Change Picture</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="select_maligawa_location">Select Maligawa Location</string>
    <string name="results_will_appear_here">Results will appear here…</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="view_stats">View Stats</string>
    <string name="view_bookings">View Bookings</string>
    <string name="login_head">LOGIN</string>
    <string name="pilgrim_pass_header">Pilgrim Pass</string>
    <string name="about_pilgrimage_days">About Pilgrimage Days</string>
    <string name="booking_screen">Bookings</string>
    <string name="please_select_your_preferred_date_and_time_for_your_visit">Please select your preferred date and time for your visit.</string>
    <string name="booking_screen_HEAD">BOOKINGS</string>
    <string name="enter_address">enter_address</string>
    <string name="show_location">show_location</string>
    <string name="show_locationname">Show Location</string>
    <string name="enter_address_name">Enter address</string>
    <string name="welcome_administrator">Welcome, Administrator!</string>
    <string name="welcome_admin">Welcome, Administrator!</string>
    <string name="setting_btn">Setting</string>
    <string name="show_weather_details">Show Weather Details</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="logout">Logout</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="settings">Settings</string>
    <string name="location_kandy">Location: Kandy</string>
    <string name="sunny">Sunny</string>
    <string name="_28_c">28°C</string>
    <string name="sri_dalada_maligawa_temple_of_the_sacred_tooth_relic">Sri Dalada Maligawa (Temple of the Sacred Tooth Relic)</string>
    <string name="key_information">Key Information</string>
    <string name="the_temple_of_the_sacred_tooth_relic_sri_dalada_maligawa_is_a_buddhist_temple_in_the_city_of_kandy_sri_lanka_it_s_located_in_the_royal_palace_complex_of_the_former_kingdom_of_kandy_which_houses_the_relic_of_the_tooth_of_the_buddha_since_ancient_times_the_relic_has_played_an_important_role_in_local_politics_because_it_is_believed_that_whoever_holds_the_relic_holds_the_governance_of_the_country_kandy_was_the_last_capital_of_the_sinhala_kings_and_it_s_a_unesco_world_heritage_site">The Temple of the Sacred Tooth Relic (Sri Dalada Maligawa) is a Buddhist temple in the city of Kandy, Sri Lanka. It\'s located in the royal palace complex of the former Kingdom of Kandy, which houses the relic of the tooth of the Buddha. Since ancient times, the relic has played an important role in local politics because it is believed that whoever holds the relic holds the governance of the country. Kandy was the last capital of the Sinhala kings, and it\'s a UNESCO World Heritage Site.</string>
    <string name="view_on_map">View on Map</string>
    <string name="_1_of_x_images">1 of X Images</string>
    <string name="book_a_visit">Book a Visit</string>
    <string name="permitted_areas_main_temple_audience_hall_new_temple_temple_museum">**Permitted Areas:** Main Temple, Audience Hall, New Temple, Temple Museum</string>
    <string name="maximum_daily_visitors_5000_approximate">**Maximum Daily Visitors:** 5000 (Approximate)</string>
    <string name="pooja_exhibition_times_5_30_am_7_00_am_9_30_am_11_00_am_6_30_pm_8_00_pm">**Pooja/Exhibition Times:** 5:30 AM - 7:00 AM, 9:30 AM - 11:00 AM, 6:30 PM - 8:00 PM</string>
    <string name="image_galleries_by_category">Image Galleries by Category</string>
    <string name="go_to_category">Go to category</string>
    <string name="category_icon">Category Icon</string>
    <string name="category_name">Category Name</string>
    <string name="todo">TODO</string>
    <string name="view_gallery_categories">View Gallery Categories</string>
    <string name="gallery_image">Gallery Image</string>
    <!--<string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps1">MapsActivity1</string>
    <string name="sri_dalada_maligawa_temple_of_the_sacred_tooth_relic">Sri Dalada Maligawa (Temple of the Sacred Tooth Relic)</string>
    <string name="the_temple_of_the_sacred_tooth_relic_sri_dalada_maligawa_is_a_buddhist_temple_in_the_city_of_kandy_sri_lanka_it_s_located_in_the_royal_palace_complex_of_the_former_kingdom_of_kandy_which_houses_the_relic_of_the_tooth_of_the_buddha_since_ancient_times_the_relic_has_played_an_important_role_in_local_politics_because_it_is_believed_that_whoever_holds_the_relic_holds_the_governance_of_the_country_kandy_was_the_last_capital_of_the_sinhala_kings_and_it_s_a_unesco_world_heritage_site">The Temple of the Sacred Tooth Relic (Sri Dalada Maligawa) is a Buddhist temple in the city of Kandy, Sri Lanka. It\'s located in the royal palace complex of the former Kingdom of Kandy, which houses the relic of the tooth of the Buddha. Since ancient times, the relic has played an important role in local politics because it is believed that whoever holds the relic holds the governance of the country. Kandy was the last capital of the Sinhala kings, and it\'s a UNESCO World Heritage Site.</string>
    <string name="key_information">Key Information</string>
    <string name="view_on_map">View on Map</string>
    <string name="_1_of_x_images">1 of X Images</string>
    <string name="maximum_daily_visitors_5000_approximate">**Maximum Daily Visitors:** 5000 (Approximate)</string>
    <string name="permitted_areas_main_temple_audience_hall_new_temple_temple_museum">**Permitted Areas:** Main Temple, Audience Hall, New Temple, Temple Museum</string>
    <string name="pooja_exhibition_times_5_30_am_7_00_am_9_30_am_11_00_am_6_30_pm_8_00_pm">**Pooja/Exhibition Times:** 5:30 AM - 7:00 AM, 9:30 AM - 11:00 AM, 6:30 PM - 8:00 PM</string>
    <string name="book_a_visit">Book a Visit</string>
-->

</resources>