<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_panel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnViewBookings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_bookings"
        android:layout_marginTop="24dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnViewStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_stats"
        android:layout_marginTop="12dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EFEFEF"
        android:padding="12dp"
        android:text="@string/results_will_appear_here"
        android:textSize="16sp"
        android:scrollbars="vertical" />

</LinearLayout>
