<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_qr_code_pass"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/qrImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/Qrimg" />

    <Button
        android:id="@+id/btnGenerateQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_for_booking"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
