<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".BookingActivity">
    <include
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/bookingLayout"
        android:layout_width="263dp"
        android:layout_height="322dp"
        android:background="@drawable/img1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/txtSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/selected_date_not_set"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/txtSelectedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/selected_time_not_set"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSelectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnConfirmBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirm_booking"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:text="@string/booking_screen_HEAD"
        android:textColor="#0F0E0E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
