<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilgrim_pass_header"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guiding"
        android:textSize="16sp"
        android:fontFamily="cursive"
        android:textColor="#555555"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginBottom="24dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/Login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF0000"
        android:text="@string/login"
        android:textColor="#000000" />

    <!-- OR Divider -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="#474646"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <View
            android:layout_width="90dp"
            android:layout_height="1dp"
            android:background="#474646"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Signup Button -->
    <Button
        android:id="@+id/Signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00CC00"
        android:text="@string/signup"
        android:textColor="#424242" />
</LinearLayout>
